--- a/style.css
+++ b/style.css
@@ -13,10 +13,8 @@ header,
     margin: 0px;
 }
 header {
-
-    justify-content: space-between;
-    padding-left: 180px;
-    padding-right: 160px;
+    justify-content: space-around;
+    padding: 0px 10px 0px 10px;
 }
 header h1 {
     font-size: 24px;
@@ -38,9 +36,11 @@ header ul {
     list-style: none;
 }
 #section-one {
+    flex: 1;
+    height: 480px;
     justify-content: center;
     align-items: center;
-    height: 480px;
+    padding: 0px 5px 0px 10px;
 }
 #section-one h2 {
     font-size: 48px;
@@ -65,11 +65,12 @@ header ul {
 }
 
 .secOne-imagePlaceholder {
+    flex: 1;
     display: flex;
-    width: 50%;
-    align-items: center;
-    justify-content: center;
+    min-width: 50%;
     background-color: #E5E7EB;
+    justify-content: center;
+    align-items: center;
 }
 .signup-button {
     background-color: #3882F6;
@@ -84,9 +85,9 @@ header ul {
 
 #section-two {
     display: flex;
-    height: 480px;
     flex-direction: column;
     align-items: center;
+    padding: 10px 0px 30px 0px;
 }
 
 .secTwo-content h2 {
@@ -103,6 +104,7 @@ header ul {
 
 .boxes {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .secTwo-boxed-box {
@@ -128,12 +130,12 @@ header ul {
 
 #section-three {
     display: flex;
-    height: 480px;
     flex-direction: column;
     align-items: center;
     background-color: #E5E7EB;
     align-items: center;
     justify-content: center;
+    padding: 90px 0px 90px 0px;
 }
 
 .secThree-content {
@@ -145,10 +147,10 @@ header ul {
 
 .secThree-content p {
     font-size: 36px;
+    width: 50%;
     font-weight: lighter;
     font-style: italic;
     color: #1F2937;
-    width: 50%;
 }
 
 #quote-author {
@@ -177,6 +179,7 @@ header ul {
     justify-content: space-around;
     align-items: center;
     height: 150px;
+    padding: 0px 20px 0px 20px;
 }
 
 .big-button-non-clickable * {
