--- a/style.css
+++ b/style.css
@@ -37,10 +37,9 @@ header ul {
 }
 #section-one {
     flex: 1;
-    height: 480px;
     justify-content: center;
     align-items: center;
-    padding: 0px 5px 0px 10px;
+    padding: 5%;
 }
 #section-one h2 {
     font-size: 48px;
@@ -49,28 +48,34 @@ header ul {
 }
 #section-one article {
     display: flex;
+    flex-wrap: wrap;
     width: 1000px;
+    justify-content: center;
+    text-align: center;
+    gap: 1rem;
 }
 .secOne-content {
-    width: 50%;
+    display: flex;
+    flex-direction: column;
+    min-width: 50%;
     justify-content: flex-start;
-    height: 230px;
 }
 .secOne-content h2 {
     margin: 0px;
 }
 
 .secOne-content p {
-    flex: 1 1 auto;
 }
 
 .secOne-imagePlaceholder {
     flex: 1;
     display: flex;
-    min-width: 50%;
+    width: 50%;
+    min-height: 230px;
     background-color: #E5E7EB;
     justify-content: center;
     align-items: center;
+    border-radius: 10px;
 }
 .signup-button {
     background-color: #3882F6;
@@ -81,6 +86,7 @@ header ul {
     width: 120px;
     font-weight: bold;
     font-size: 17px;
+    align-self: center;
 }
 
 #section-two {
