--- a/style.css
+++ b/style.css
@@ -94,6 +94,7 @@ header ul {
     flex-direction: column;
     align-items: center;
     padding: 10px 0px 30px 0px;
+    justify-content: space-around;
 }
 
 .secTwo-content h2 {
@@ -106,6 +107,7 @@ header ul {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
 }
 
 .boxes {
